# carreg

./: Cargo.toml
migrations/2022-12-03-112759_ar_marka/: down.sql  up.sql
migrations/2022-12-03-112760_ar_modelis/: down.sql  up.sql
migrations/2022-12-03-112817_ar_turetaja_adrese/: down.sql  up.sql
migrations/2022-12-03-112820_ar_veids/: down.sql  up.sql
migrations/2022-12-03-112827_ar_krasa/: down.sql  up.sql
migrations/2022-12-03-112844_ar_degviela/: down.sql  up.sql
migrations/2022-12-03-112846_ar_motors/: down.sql  up.sql
migrations/2022-12-03-112866_ar_pase/: down.sql  up.sql
migrations/2022-12-03-112900_ar_auto/: down.sql  up.sql
src/: lib.rs  models.rs  schema.rs
