[package]
name = "carreg"
version = "0.1.0"
edition = "2021"
authors = ["Dag Nelius <dag.nelius@gmail.com>"]
publish = false

[dependencies]
rocket = "0.4"
serde = { version = "1.0", features = ["derive"]}
serde_json = "1.0"
diesel = { version = "2.0.0", features = ["mysql"] }
dotenvy = "0.15"

[dependencies.rocket_contrib]
version = "0.4"
default-features = false
features = ["json"]

[lib]
name = "lib"
path = "src/lib.rs"
doc = false

[[bin]]
name = "main"
path = "src/bin/main.rs"